--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,28 @@
     <artifactId>AppimJavaMobile</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <url>http://maven.apache.org</url>
+
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
+        <junit-version>5.10.1</junit-version>
+        <appium-version>9.0.0</appium-version>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>${junit-version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.appium</groupId>
+            <artifactId>java-client</artifactId>
+            <version>${appium-version}</version>
+        </dependency>
+
+    </dependencies>
 
 </project>
