--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <maven.compiler.target>8</maven.compiler.target>
         <junit-version>5.10.1</junit-version>
         <appium-version>7.3.0</appium-version>
+        <cucumber-version>7.15.0</cucumber-version>
     </properties>
 
     <dependencies>
@@ -29,6 +30,18 @@
             <artifactId>java-client</artifactId>
             <version>${appium-version}</version>
         </dependency>
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-java</artifactId>
+            <version>${cucumber-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-junit</artifactId>
+            <version>${cucumber-version}</version>
+            <scope>test</scope>
+        </dependency>
+
 
     </dependencies>
 
